--- a/app/globals.css
+++ b/app/globals.css
@@ -5,22 +5,16 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.inputStyle {
+  @apply p-[10px] border-[0.8px] border-[#CFDBE8] rounded-lg bg-[#F7FAFC];
+}
+
+.labelHolder {
+  @apply flex flex-col text-[14px];
 }
